@@ -3,17 +3,15 @@
 <use name=FWCore/ParameterSet>
 <use name=DataFormats/PatCandidates>
 <use name=DataFormats/Common>
-<use name=SusyAnalysis/EventSelector>
 <use name=root>
 <use name=PhysicsTools/UtilAlgos>
 <use name=FWCore/ServiceRegistry>
 <export>
-   <lib name=SusyAnalysisACSusyAnalysis>
+   <lib name=aachen3aACSusyAnalysis>
    <use name=FWCore/Framework>
    <use name=FWCore/PluginManager>
    <use name=FWCore/ParameterSet>
    <use name=DataFormats/Common>
-   <use name=SusyAnalysis/EventSelector>
    <use name=PhysicsTools/UtilAlgos>
    <use name=FWCore/ServiceRegistry>
    <use name=DataFormats/PatCandidates>
