@@ -1,3 +1,6 @@
+2009-02-20 Carsten Magass <magass -at- physik.rwth-aachen.de>
+	* bugfix dependencies & compiling (thanks to Markus)
+	* tagged as version v2-5
 2009-02-19 Carsten Magass <magass -at- physik.rwth-aachen.de>
         * improved analysis code & wrapper (new functionality)
 	* new flag in Filler (is_MC, has to set for data and MC accordingly) 
